2008-01-07  David Schleef  <ds@schleef.org>

	* docs/faq/dependencies.xml: Fix typo.

2008-01-07  Wim Taymans  <wim.taymans@collabora.co.uk>

	* libs/gst/base/gstbasesrc.c: (gst_base_src_default_do_seek),
	(gst_base_src_loop):
	Don't update the last_stop position in do_seek, that's the position we
	did a seek to.
	Read backwards when we have a negative rate.

	* tests/check/elements/filesrc.c: (event_func), (wait_eos),
	(setup_filesrc), (cleanup_filesrc), (GST_START_TEST),
	(filesrc_suite):
	Add check for reverse reading.

2008-01-07  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Alexis Ballier <aballier at gentoo org>

	* tests/check/gst/gstabi.c:
	* tests/check/gst/struct_ppc64.h:
	* tests/check/libs/libsabi.c:
	* tests/check/libs/struct_ppc64.h:
	  Decide which header to include based on the userland ABI target
	  and not the kernel/cpu. Fix up structure sizes of ppc64 header
	  for 64-bit userland (#503590).  Might need something similar for
	  x86 too.

2008-01-05  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/gstdebugutils.c: (_gst_debug_bin_to_dot_file):
	  Log the reason why fopen fails in addition to the fact that it failed.
	  
2008-01-04  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/parse/parse.l:
	Use "%option never-interactive" to prevent useless calls to isatty()
	on every input when parsing. Also use "%option noinput" to not define
	the static input/yyinput functions which we don't use anyway. This
	removes a compiler warning with gcc 4.3 and saves some bytes in the
	library.
	
	* gst/parse/lex._gst_parse_yy.pre.c:
	Regenerated for the above change.

2008-01-04  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/gstpad.c: (fixate_value):
	Don't crash when trying to fixate and empty list.
	Fixes #506643.

2008-01-03  Sebastian Dröge  <slomo@circular-chaos.org>

	* docs/faq/gst-uninstalled:
	Clarify the comments to make the usage of this script and what it
	does easier to understand.
